fixed some responsive padding issues on mobile view.

--- a/framework/homepage_partials/less/_version_1.less
+++ b/framework/homepage_partials/less/_version_1.less
@@ -32,6 +32,7 @@
 				color:gray;
 			}
 		}
+		//Call to Action Buttons in the Hero Description
 		.cap-cta {
 			position: relative;
 			text-align: justify;
@@ -310,6 +311,7 @@
 }
 @media (max-width:767px) {
 	.hero-feature .feature-caption {
+		padding-left: 0;
 		.cap-title {
 			text-align:center;
 		}
@@ -317,13 +319,8 @@
 			padding-left: 0;
 			text-align:center;
 		}
-		//Removed for testing responsiveness across mobile devices
-		/*.cap-cta {
-			text-align: center;
-			padding: 0;
-			.cta {
-				margin: 0 15px;
-			}
-		}*/
+		.cap-cta {
+			padding-right: 0;
+		}
 	}
 } 
